# pyqinglab

./: .gitignore  LICENSE.txt  __init__.py  datafile.py  dataset.py  pyqinglab_testnotebook.ipynb  setup.cfg  sigprocess.py
AutoStepFinder/: stepfindCore.py  stepfindInOut.py
DataAcquisition/: pyDAQBase.py  pyDAQTask.py  pyHEKADataAcq.py
DataAnalysis/: datafile.py  dataset.py  hmm.py  sigprocess.py  step_detect.py
DataStorage/: datafile.py  dataset.py
docs/: PyQLab_Manual.ipynb  PyQingLab_Manual.ipynb
pyqlab/: datafile.py  dataset.py  sigprocess.py
src/: __init__.py  datafile.py  dataset.py
tests/: pyqinglab_testnotebook.ipynb  sigprocess.ipynb  test_hdf.hdf5  test_import.py
