[metadata]
name = pyqlab
version = 0.0.1
author = Quan Qing
author_email = quan.qing@asu.edu
description = Python classes and scripts used for data analysis in QingLAB@ASU
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/qing-lab/pyqlab
project_urls =
    Bug Tracker = https://github.com/Qing-LAB/pyqlab/issues
    repository = https://github.com/qing-lab/pyqlab
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD 3-Clause License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find: 
python_requires = >=3.10

[options.packages.find]
where = src